--- a/pubsub/package.json
+++ b/pubsub/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "code-interview",
+  "name": "pubsub",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "mocha",
-    "test": "mocha"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +16,10 @@
     "url": "https://github.com/bookmd/code-interview/issues"
   },
   "homepage": "https://github.com/bookmd/code-interview#readme",
-  "devDependencies": {
-    "mocha": "^6.2.0"
-  },
   "dependencies": {
-    "uuid": "^3.3.3"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
